# operators-withlazers

./: .dockerignore  CNAME  Cargo.toml  Dockerfile  Dockerfile.gh  Makefile
.github/workflows/: check.yaml  ci.yaml  release.yaml
charts/secret-sync-operator/: Chart.yaml  values.yaml
charts/secret-sync-operator/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
common/: Cargo.toml
common/src/: lib.rs  prelude.rs  utils.rs
secret-sync-operator/: Cargo.toml
secret-sync-operator/charts/secret-sync-operator/templates/: deployment.yaml
secret-sync-operator/charts/secret-sync-operator/templates/tests/: test-connection.yaml
secret-sync-operator/src/: constants.rs  error.rs  globlist.rs  lib.rs  main.rs
secret-template-operator/: Cargo.toml  secretTemplate.yaml
secret-template-operator/src/: crd.rs  error.rs  lib.rs
