[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
kube = { version = "0.73.1", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23"] }
futures = "0.3.21"
thiserror = "1.0.31"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
