[package]
name = "secret-template-operator"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
kube = { version = "0.73.1", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23", "schemars"] }
futures = "0.3.21"
thiserror = "1.0.31"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
randstr = "0.2.0"
schemars = "0.8.10"
serde_json = "1.0.81"
base64 = "0.13.0"
serde_yaml = "0.8.24"
json-patch = "0.2.6"
